# nfsim

./: .gitignore  CMakeLists.txt  CMakeLists.x86.txt  fix.py  patch.diff  patch2.diff  plan.md  testTlbrOut0_nf.out  test_compartment_update.net  test_compartment_update.xml  test_compartment_update_bug.bngl  test_compartment_update_bug.gdat  test_compartment_update_bug.net  test_compartment_update_bug.xml  test_compartment_update_molecule_type_list.tsv  test_compartment_update_nf.gdat  test_compartment_update_reaction.net  test_compartment_update_reaction.xml  test_compartment_update_reaction2.bngl  test_compartment_update_reaction2.gdat  test_compartment_update_reaction2.net  test_compartment_update_reaction2.xml  test_compartment_update_rxn_list.tsv  test_script.py  test_ts_invalid_fmt.txt  v42.net  v42_molecule_type_list.tsv  v42_nf.gdat  v42_rxn_list.tsv
src/: NFsim.cpp  NFsim.hh
src/NFcore/: NFcore.hh  complex.cpp  complexList.cpp  molecule.cpp  moleculeType.cpp  reactionClass.cpp  system.cpp  templateMolecule.cpp  templateMolecule.cpp.orig  templateMolecule.hh
src/NFfunction/: compositeFunction.cpp  function.cpp  localFunction.cpp
src/NFfunction/muParser/: muParser.cpp  muParserComplex.cpp
src/NFinput/: NFinput.cpp  parseSymRxns.cpp
src/NFinput/TinyXML/: tinyxml.cpp  tinyxml.h
src/NFreactions/reactions/: DORreaction.cpp  reaction.cpp
src/NFreactions/transformations/: moleculeCreator.cpp  speciesCreator.cpp  speciesCreator.hh  transformation.cpp  transformation.hh  transformationSet.cpp  transformationSet.hh
src/NFscheduler/: Scheduler.cpp
src/NFutil/: NFutil.hh  conversion.cpp  random.cpp
test/compartment/: test_compartment_update.bngl  test_compartment_update_reaction.bngl
test/testSuite/: v42.bngl  v43.bngl
tools/: runbng.m
tools/NFparamScan/: runNFsimOnce.m
validate/: validate.py  validate_subset.py
validate/basicModels/: r42.txt  r43.txt  r44.txt  v40.xml  v42.bngl  v42.species  v42.xml  v43.bngl  v43.species  v43.xml  v44.bngl  v44.species  v44.xml
(+30 files in other folders)
